@@ -14,6 +14,9 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import java.util.Collections;
+import java.util.List;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -56,12 +59,19 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         String email = jwtService.extractEmail(token);
+        String role = jwtService.extractRole(token);
+        
+        System.out.println("ROLE JWT = " + role);
 
         UsernamePasswordAuthenticationToken authentication =
                 new UsernamePasswordAuthenticationToken(
                         email,
                         null,
-                        Collections.emptyList());
+                        List.of(
+                            new SimpleGrantedAuthority(
+                                "ROLE_" + role)));
+        
+        System.out.println(authentication.getAuthorities());
 
         SecurityContextHolder
                 .getContext()
